# fast-dds-example

./: CMakeLists.txt  CMakeSettings.json  NOTICE  README.md
src/: CLIPublisher.cpp  CLIPublisher.h  UISubscriber.cpp  UISubscriber.h
src/common/: PubListener.cpp  PubListener.h  PubListener.hpp  config.cpp  config.h  config.hpp
src/common/CMake/: common_dependencies.cmake  external_fastdds.cmake  external_foonathan_memory.cmake  install_node.cmake
src/config/: service_template.service
src/message_types/string_message/: string_message.idl  string_messagePubSubTypes.cxx  string_messageTypeObjectSupport.cxx
src/nodes/cli/: CMakeLists.txt  cli.cpp  cli.h  cli_node.cpp  cli_node.h  main.cpp  skyframe_cli.toml
src/nodes/speech_recognition/: CMakeLists.txt  simple.c
src/nodes/ui/: CMakeLists.txt  main.cpp  skyframe_ui.toml  ui.cpp  ui.h
src/types/string_message/: string_message.hpp  string_messageCdrAux.hpp  string_messageCdrAux.ipp  string_messagePubSubTypes.hpp  string_messageTypeObjectSupport.hpp
